[tool.poetry]
name = "ice-breaker-course-reference"
version = "0.1.0"
description = ""
authors = ["Nhan Nguyen <nhan.nguyen@27global.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.11"
langchain-openai = "^0.2.12"
python-dotenv = "^1.0.1"
black = "^24.10.0"
langchainhub = "^0.1.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
